tests/ui/all_maybe.stderr
error: unexpected end of input, a `join!` with only `maybe` arms returns immediately and executes nothing
 --> tests/ui/all_maybe.rs:5:5
  |
5 | /     join!(
6 | |         maybe std::future::ready(1),
7 | |         maybe std::future::ready(2),
8 | |     );
  | |_____^
  |
  = note: this error originates in the macro `join` (in Nightly builds, run with -Z macro-backtrace for more info)
